--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "chai_backend",
   "version": "1.0.0",
   "description": "a backeend",
-  "type": "module",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon --experimental-json-modules index.js src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -18,8 +18,16 @@
     "prettier": "^3.8.1"
   },
   "dependencies": {
-    "dotenv": "^17.2.4",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "mongoose": "^9.2.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Deep-Kamal/project-Backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Deep-Kamal/project-Backend/issues"
+  },
+  "homepage": "https://github.com/Deep-Kamal/project-Backend#readme"
 }
